# show-words

./: Makefile  README  show-words.cabal  show_words.cabal
src/: SgfList.hs  SgfListIndex.hs  SgfOrderedLine.hs  ShowWords.hs  ShowWordsConfig.hs  ShowWordsOptions.hs  ShowWordsOutput.hs  ShowWordsText.hs  infIndex.hs  multiline.hs  show-words.hs  show_words.hs  testSgfList.hs  testShowWordsText.hs  test_3.txt  test_words.txt  tf.hs  zipFold.hs
src/Sgf/: List.hs  OrderedLine.hs
src/ShowWords/: Config.hs  Output.hs  Text.hs
src/test/: 2.txt  words_en_ru.txt
test/: words_jp_ru.txt
tests/: testSgfList.hs  testShowWordsText.hs
