name:               show-words
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            1.9.0.0
stability:          provisional

-- FIXME: Is this compatible with cabal 1.2?
cabal-version:      >= 1.8
build-type:         Simple

maintainer:         sgf.dma@gmail.com
bug-reports:        mailto:sgf.dma@gmail.com

license:            BSD3
license-file:       LICENSE

category:           Text
synopsis:           Show words from a file by columns.
tested-with:        GHC == 6.12.3

data-files:         README
extra-source-files: .gitignore
                    tests/words/*.txt
extra-tmp-files:    bin


--library
--    exposed-modules:    Sgf.List
--                        Sgf.OrderedLine
--    build-depends:      base == 4.5.*, mtl == 2.1.*, random == 1.0.*
--    hs-source-dirs:     src
-- FIXME: v2: These modules should be exported by separate package. But this
-- package should export only ShowWords.* as library.
library
    exposed-modules:    Sgf.List
                        Sgf.OrderedLine
                        ShowWords
                        ShowWords.Config
                        ShowWords.Text
                        ShowWords.Output
    build-depends:      base == 4.2.*
                        , mtl == 1.1.*
                        , random == 1.0.*
                        , utf8-string == 0.3.*
                        , bytestring == 0.9.*
    hs-source-dirs:     src
    ghc-options:        -Wall


executable show_words
    main-is:            show-words.hs
    other-modules:      ShowWords
                        ShowWords.Config
                        ShowWords.Text
                        ShowWords.Output
    build-depends:      base == 4.2.*
                        , mtl == 1.1.*
                        , random == 1.0.*
                        , utf8-string == 0.3.*
                        , bytestring == 0.9.*
    hs-source-dirs:     src
    ghc-options:        -Wall


executable testSgfList
    main-is:            testSgfList.hs
    other-modules:	Sgf.List
    build-depends:      base == 4.2.*, mtl == 1.1.*, random == 1.0.*
    hs-source-dirs:     tests src
    ghc-options:        -Wall

executable testShowWordsText
    main-is:            testShowWordsText.hs
    other-modules:	ShowWords.Text
    build-depends:      base == 4.2.*, mtl == 1.1.*, random == 1.0.*
    hs-source-dirs:     tests src
    ghc-options:        -Wall

