name:               show-words
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            1.9.0.0
stability:          provisional

cabal-version:      >= 1.9.2
build-type:         Simple

maintainer:         sgf.dma@gmail.com
bug-reports:        mailto:sgf.dma@gmail.com

license:            BSD3
license-file:       LICENSE

category:           Text
synopsis:           Show words from a file by columns.
tested-with:        GHC == 7.4.1

extra-source-files: README
                    .gitignore
                    tests/words/*.txt


library
    exposed-modules:    ShowWords
                        ShowWords.Config
                        ShowWords.Text
                        ShowWords.Output
    build-depends:      base == 4.5.*
                        , mtl == 2.1.*
                        , random == 1.0.*
                        , utf8-string == 0.3.*
                        , bytestring == 0.9.*
                        , hs-sgf-lib == 1.9.*
    hs-source-dirs:     src
    ghc-options:        -Wall


executable show-words
    main-is:            show-words.hs
    build-depends:      base == 4.5.*
                        , mtl == 2.1.*
                        , random == 1.0.*
                        , utf8-string == 0.3.*
                        , bytestring == 0.9.*
                        , hs-sgf-lib == 1.9.*
                        , show-words == 1.9.*
    hs-source-dirs:     src
    ghc-options:        -Wall


test-suite testShowWordsText
    type:               exitcode-stdio-1.0
    main-is:            testShowWordsText.hs
    build-depends:      base == 4.5.*
                        , mtl == 2.1.*
                        , hs-sgf-lib == 1.9.*
                        , show-words == 1.9.*
    hs-source-dirs:     tests
    ghc-options:        -Wall

